philly-311-citywide-meta/src/objects/Feedback_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Dependent_Status__c</fullName>
        <formula>text(Feedback__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Summary__c</fullName>
        <formula>Feedback__r.Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Depends On</relationshipLabel>
        <relationshipName>Relates_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Disposition__c</fullName>
        <formula>Text( Related_Feedback__r.Close_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Disposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Feedback__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Dependents</relationshipLabel>
        <relationshipName>Related_To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Status__c</fullName>
        <formula>text(Related_Feedback__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Depends</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related/Similar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Related_Feedback__r.Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <label>Related Feedback</label>
    <nameField>
        <displayFormat>RF-{00000}</displayFormat>
        <label>Related Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>